2015-04-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix bug when dealing binary phenotypes
	* Revise banner

2015-03-24  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise documentation
	* Fix conservative p-values in analyticVT models
	* Fix statistics in many rare variant tests

2015-03-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve FamSkat speed
	* Fix outputs for FpTest
	* Add auto-indexing function for "--meta score" model
	* Fix bug when outputting zero frequency

2015-03-18  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support dosage (vcf2kinship)
	* Fix memory leaks (rvtests)
	* Improve prompt messages

2015-03-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Clean code
	* Support log for vcf2kinship

2015-02-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Restructure classes and reduce duplicated codes

2015-02-08  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve numeric stability for linear mixed models

2015-01-04  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve speed and outputs of family-based models
	* Fix bug when generating covariance matrix
	* Support compiling on OSX Yosemite
	* Plan to handle multi-allelic variants better

2014-12-11  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Report heritability estimation in family-based models
	* Add variable threshold test using analytical approach
	* Add family-based tests: famCMC, famZeggini and famSKAT
	* Add Firth regression
	* Fix bugs in famLRT

2014-10-11  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Clean codes
	* Upgrade PCRE to version 8.36

2014-10-06  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix allele frequency calculation in related samples

2014-07-29  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change AF = 0 to NA when the sites are all missing
