@@ -1,6 +1,7 @@
 2015-04-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
 
 	* Fix bug when dealing binary phenotypes
+	* Imporve stability in Firth regression
 	* Revise banner
 
 2015-03-24  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
